[gd_scene load_steps=4 format=3 uid="uid://vjaicsvpalns"]

[ext_resource type="Script" uid="uid://v11v5uorfuyn" path="res://Scripts/crowlift_app.gd" id="1_lgs1f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4kvt"]
bg_color = Color(0.866667, 0.486275, 0.258824, 0.690196)

[sub_resource type="Theme" id="Theme_y3x6g"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_v4kvt")

[node name="CrowLift" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -350.0
offset_right = 450.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lgs1f")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
offset_right = 900.0
offset_bottom = 700.0
theme = SubResource("Theme_y3x6g")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="TopLeftMenu" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseBtn" type="Button" parent="PanelContainer/VBoxContainer/TopLeftMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Close"

[node name="CrowLiftLogo" type="Label" parent="PanelContainer/VBoxContainer/TopLeftMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 6.55
text = "CrowLift"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SearchBar" type="TextEdit" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_colors/caret_color = Color(1, 1, 1, 1)
placeholder_text = "Type to search"
caret_blink = true
caret_draw_when_editable_disabled = true

[node name="SearchBtn" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Search"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="TrackDataBar" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="PanelContainer/VBoxContainer/TrackDataBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Name"
vertical_alignment = 1

[node name="Length" type="Label" parent="PanelContainer/VBoxContainer/TrackDataBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Length"
vertical_alignment = 1

[node name="DownloadTime" type="Label" parent="PanelContainer/VBoxContainer/TrackDataBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Download Time"
vertical_alignment = 1

[node name="Firewall" type="Label" parent="PanelContainer/VBoxContainer/TrackDataBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Firewall"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/TrackDataBar"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 14.0

[node name="TrackDataList" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Track1" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer/TrackDataList"]
layout_mode = 2

[node name="Name" type="Label" parent="PanelContainer/VBoxContainer/ScrollContainer/TrackDataList/Track1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Placeholder"
vertical_alignment = 1

[node name="Length" type="Label" parent="PanelContainer/VBoxContainer/ScrollContainer/TrackDataList/Track1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Placeholder"
vertical_alignment = 1

[node name="DownloadTime" type="Label" parent="PanelContainer/VBoxContainer/ScrollContainer/TrackDataList/Track1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Placeholder"
vertical_alignment = 1

[node name="Firewall" type="Label" parent="PanelContainer/VBoxContainer/ScrollContainer/TrackDataList/Track1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Placeholder"
vertical_alignment = 1

[node name="SelectBtn" type="Button" parent="PanelContainer/VBoxContainer/ScrollContainer/TrackDataList/Track1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Select"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="DownloadBtn" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Download"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2

[node name="DLProgress" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DLProgressBar" type="HBoxContainer" parent="PanelContainer/VBoxContainer/DLProgress"]
layout_mode = 2
size_flags_vertical = 3

[node name="Name" type="Label" parent="PanelContainer/VBoxContainer/DLProgress/DLProgressBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
text = "Name"
vertical_alignment = 1

[node name="Progress" type="Label" parent="PanelContainer/VBoxContainer/DLProgress/DLProgressBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
text = "Progress"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/DLProgress/DLProgressBar"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Progress1" type="HBoxContainer" parent="PanelContainer/VBoxContainer/DLProgress"]
layout_mode = 2

[node name="Name" type="Label" parent="PanelContainer/VBoxContainer/DLProgress/Progress1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
text = "Placeholder"
vertical_alignment = 1

[node name="Progress" type="ProgressBar" parent="PanelContainer/VBoxContainer/DLProgress/Progress1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/DLProgress/Progress1"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
